client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/OBJ_Invoice__c.object-meta.xml
<CustomObject>
    <label>OBJ Invoice</label>
    <nameField>
        <label>OBJ SAP Invoice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OBJ SAP Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>