client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_AccountingDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>FLD_AccountingDocumentNumber__c</fullName>
    <label>FLD Accounting Document Number</label>
    <description>Accounting Document Number</description>
    <length>10</length>
    <type>Text</type>
</CustomField>