client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_BillingCategory__c.field-meta.xml
<CustomField>
    <fullName>FLD_BillingCategory__c</fullName>
    <label>FLD Billing Category</label>
    <description>Billing Category</description>
    <length>1</length>
    <type>Text</type>
</CustomField>