client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_BillingDate__c.field-meta.xml
<CustomField>
    <fullName>FLD_BillingDate__c</fullName>
    <label>FLD Billing Date</label>
    <description>Billing Date</description>
    <type>DateTime</type>
</CustomField>