client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_BillingDocument__c.field-meta.xml
<CustomField>
    <fullName>FLD_BillingDocument__c</fullName>
    <label>FLD Billing Document</label>
    <description>Billing Document</description>
    <length>10</length>
    <type>Text</type>
</CustomField>