client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_BillingStatus__c.field-meta.xml
<CustomField>
    <fullName>FLD_BillingStatus__c</fullName>
    <label>FLD Billing Status</label>
    <description>Billing Status</description>
    <length>1</length>
    <type>Text</type>
</CustomField>