client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_BillingType__c.field-meta.xml
<CustomField>
    <fullName>FLD_BillingType__c</fullName>
    <label>FLD Billing Type</label>
    <description>Billing Type</description>
    <length>4</length>
    <type>Text</type>
</CustomField>