client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>FLD_CompanyCode__c</fullName>
    <label>FLD Company Code</label>
    <description>Company Code</description>
    <length>4</length>
    <type>Text</type>
</CustomField>