client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_Country__c.field-meta.xml
<CustomField>
    <fullName>FLD_Country__c</fullName>
    <label>FLD Country</label>
    <description>Country</description>
    <length>3</length>
    <type>Text</type>
</CustomField>