client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_CreateDate__c.field-meta.xml
<CustomField>
    <fullName>FLD_CreateDate__c</fullName>
    <label>FLD Create Date</label>
    <description>Create Date</description>
    <type>DateTime</type>
</CustomField>