client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FLD_CreatedBy__c</fullName>
    <label>FLD Created By</label>
    <description>Created By</description>
    <length>12</length>
    <type>Text</type>
</CustomField>