client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>FLD_DistributionChannel__c</fullName>
    <label>FLD Distribution Channel</label>
    <description>Distribution Channel</description>
    <length>2</length>
    <type>Text</type>
</CustomField>