client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_Division__c.field-meta.xml
<CustomField>
    <fullName>FLD_Division__c</fullName>
    <label>FLD Division</label>
    <description>Division</description>
    <length>2</length>
    <type>Text</type>
</CustomField>