client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FLD_FiscalYear__c</fullName>
    <label>FLD Fiscal Year</label>
    <description>Fiscal Year</description>
    <length>4</length>
    <type>Text</type>
</CustomField>