client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_NetOrderValue__c.field-meta.xml
<CustomField>
    <fullName>FLD_NetOrderValue__c</fullName>
    <label>FLD Net Order Value</label>
    <description>Net Order Value</description>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>