client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_Payer__c.field-meta.xml
<CustomField>
    <fullName>FLD_Payer__c</fullName>
    <label>FLD Payer</label>
    <description>Payer</description>
    <length>10</length>
    <type>Text</type>
</CustomField>