client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_PayerName__c.field-meta.xml
<CustomField>
    <fullName>FLD_PayerName__c</fullName>
    <label>FLD Payer Name</label>
    <description>Payer Name</description>
    <length>35</length>
    <type>Text</type>
</CustomField>