client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_ReferenceDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>FLD_ReferenceDocumentNumber__c</fullName>
    <label>FLD Reference Document Number</label>
    <description>Reference Document Number</description>
    <length>16</length>
    <type>Text</type>
</CustomField>