client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_Region__c.field-meta.xml
<CustomField>
    <fullName>FLD_Region__c</fullName>
    <label>FLD Region</label>
    <description>Region</description>
    <length>3</length>
    <type>Text</type>
</CustomField>