client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_SalesDocumentCurrency__c.field-meta.xml
<CustomField>
    <fullName>FLD_SalesDocumentCurrency__c</fullName>
    <label>FLD Sales Document Currency</label>
    <description>Sales Document Currency</description>
    <length>5</length>
    <type>Text</type>
</CustomField>