client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>FLD_SalesOrganization__c</fullName>
    <label>FLD Sales Organization</label>
    <description>Sales Organization</description>
    <length>4</length>
    <type>Text</type>
</CustomField>