client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_ShippingConditions__c.field-meta.xml
<CustomField>
    <fullName>FLD_ShippingConditions__c</fullName>
    <label>FLD Shipping Conditions</label>
    <description>Shipping Conditions</description>
    <length>2</length>
    <type>Text</type>
</CustomField>