client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_SoldToName__c.field-meta.xml
<CustomField>
    <fullName>FLD_SoldToName__c</fullName>
    <label>FLD Sold To Name</label>
    <description>Sold To Name</description>
    <length>35</length>
    <type>Text</type>
</CustomField>