client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_SoldToParty__c.field-meta.xml
<CustomField>
    <fullName>FLD_SoldToParty__c</fullName>
    <label>FLD Sold_To_Party</label>
    <description>Sold To Party</description>
    <length>10</length>
    <type>Text</type>
</CustomField>