client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice__c/fields/FLD_TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FLD_TaxAmount__c</fullName>
    <label>FLD Tax Amount</label>
    <description>Tax Amount</description>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>